--- a/.github/workflows/build_edge_docker.yml
+++ b/.github/workflows/build_edge_docker.yml
@@ -36,6 +36,10 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=sha
+            type=ref,event=branch
+            type=ref,event=tag
 
       - name: Cache Docker layers
         uses: actions/cache@v4.2.2
@@ -63,3 +67,15 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - run: echo "SHORT_SHA=`git rev-parse --short HEAD`" >> $GITHUB_ENV
+      - name: Update deployment repo
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.L4N_PAT }}
+          repository: VSETH-GECO/l4n-deploy
+          event-type: l4n
+          client-payload: |
+            {
+              "tag": "${{ env.SHORT_SHA }}"
+            }
